# GenAn

./: .gitignore  .project  .pydevproject  .travis.yml  LICENSE  README.md  requirements.txt  setup.py
angular_gen/: angular_generator.py  setup.py
angular_gen/templates/controllers/: form.js
angular_gen/templates/controllers/basic/: date.js
angular_gen/templates/views/: page.css  row.html
angular_gen/templates/views/basic/: combobox.html  date.html  radio.html
angular_gen/templates/views/data_show/: list.html
flask_gen/: config.json  flask_generator.py  setup.py
flask_gen/templates/: app.jinja  base_model.jinja  config.jinja  model.jinja  run.jinja  view.jinja
node_gen/: .gitignore  node_generator.py  setup.py
node_gen/templates/: rest.js
src/: genan.py  genan_env.py
src/angular_gen/: angular_generator.py  jinja_filters.py
src/angular_gen/templates/: common.jinja
src/angular_gen/templates/controllers/: api.service.js  factory.js  form.js  page.js  table.js  view.js
src/angular_gen/templates/controllers/actions/: restartUpdate.js  save.js
src/angular_gen/templates/route/: app.routes.js  routes_redefine.js
src/angular_gen/templates/views/: page.html  row.html
src/angular_gen/templates/views/basic/: button.html  combobox.html  form.html  label.html  multilist.html  number.html
src/angular_gen/templates/views/data_show/: list.html  paragraph.html  staticLink.html  table.html  thumbnail.html
src/angular_gen/templates/views/frame/: header.html
src/concepts/: addition_parameters.py  data_show.py  footer.py  form.py  integer_condition.py  jumbo.py  jumbo_parameters.py  layout.py  menu.py  menubar.py  object.py  page.py  paragraph.py  property.py  query.py  ref_link.py  row.py  row_separator.py  selector_fk_object.py  selector_object.py  selector_view.py  sidebar.py  static_link.py  string_condition.py  use.py  view.py  view_in_view.py  view_on_page.py
src/generation/: generator.py
src/generation/templates/: common.jinja
src/generation/templates/backend/: app.js  common.js  model.js  rest.js
src/generation/templates/controllers/: factory  factory.js  form.js  page.js  table.js  view.js
src/generation/templates/controllers/actions/: remove.js
src/generation/templates/controllers/basic/: checkbox.js
src/generation/templates/route/: app.modules.js  app.routes.js
src/generation/templates/views/: page.css  page.html  view.html
src/generation/templates/views/basic/: button.html  checkbox.html  combobox.html  date.html  email.html  form.html  image.html  input.html  label.html  link.html  number.html  password.html  radio.html  text.html
src/generation/templates/views/data_show/: jumbo.html  list.html  table.html  thumbnail.html
src/generation/templates/views/frame/: footer.html  header.html  sidebar.html
src/grammar/: grammar.tx
src/interpretation/: interpreter.py
src/interpreter/: generator.py  interpreter.py
src/main/: common.py  config.json  genan.py
src/node_gen/: jinja_filters.py  node_generator.py
src/node_gen/templates/: app.js  default_route_callbacks.js  model.js  rest.js  route.js  route_callbacks.js
test/: example.gn  home.gn  query.gn  rest.gn  test.gn  test.py  user.gn
