menubar mainMenu 'GenAn' @home:
	    menu Views:
            'Table' @table_page
            'Thumbnail' @thumbnail_page
            'List' @list_page
	    ;

	    menu Groups:
            'Group form' @group_form_page
            'Table of groups' @group_table_page
            'Thumbnails of groups' @group_thumbnail_page
            'List of groups' @group_list_page
	    ;

	    'User form' @user_form_page left
	    'About' @about_page

		 menu Links right:
	    	'Facebook' ref='http://facebook.com'
	    	'You tube' ref='http://youtube.com'
	    	'Twitter' ref='http://twitter.com'
	    ;
	    'Sign up' ref='http://google.com' right

	;
	
sidebar mainSidebar:
		//color=gray
		'Home' @home
	    'GitHub' ref='https://github.com/theshammy/GenAn'
	    'Google Search' ref='http://google.com'
	;

footer mainFooter 'Copyright MIT, organization GenAn ©' right color=black ;

object user:
	username text label='User name' class={'required'}
	pass password label='Password'
	age number label='Age' class={'required', 'step':'1'} 
	mail email label='Email' 
	birthDate date label = 'Birth date' 
	gender combobox label='Gender' parameters = { 'Male', 'Female' }
;

object group:
    Meta:
        single user by username, mail 'owner'
        list user by username, mail 'users'
    ;
    name text label='Group name'
    description text label='Description'
;

object common:
	banner1 image label='banner' ref= 'http://orig06.deviantart.net/e08c/f/2014/163/a/2/computer_programming_banner_by_nuranox-d7m1ta5.png'  class = {'width':'300', 'height':'100','margin':'auto'}
	banner2 image label='banner' ref= 'http://prg.is.titech.ac.jp/wp-content/uploads/2013/09/prg-banner-201309.jpg'  class = {'width':'300', 'height':'100','margin':'auto'}
	
	tableName label label='Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at nisl sed ipsum posuere pharetra 
			accumsan at urna.' 
;

page home:
    indexPage=True
	title='Home'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	jumbo:  heading='Welcome'
			text='Lorem ipsum dolor sit amet, 
				  consectetur adipiscing elit. Donec interdum ipsum vitae 
				  odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.'
			imgPath='http://www.planwallpaper.com/static/images/518079-background-hd.jpg'
			position=top
			
	paragraph 'Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.
			   Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.'
			   position=left
	link 'Read more' ref='#' position=left
	paragraph '&nbsp; ' position=left
	paragraph '&nbsp; ' position=left
	
	paragraph 'Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.
			   Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.'
			   position=left
	link 'Read more' ref='#' position=left 
	
	paragraph 'Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.
			   Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.'
			    position=center 
	link 'Read more' ref='#' position=center	
	paragraph '&nbsp; ' position=center
	paragraph '&nbsp; ' position=center
	
	paragraph 'Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.
			   Lorem ipsum dolor sit amet, 
			   consectetur adipiscing elit. Donec interdum ipsum vitae 
			   odio congue, in placerat mauris congue. Sed imperdiet sodales finibus.'
			    position=center
	link 'Read more' ref='#' position=center //class={'style':'float:right;'} 	    
;


page user_form_page:
	title='User form'
	use menubar mainMenu
 	show user_form_view position=center
;
	
view user_form_view:
	!row 1
	form for user actions=save at 3 size 6
;
	
page about_page:
	title='About'
	use sidebar mainSidebar
	show image_about_view position=top 
	paragraph 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at nisl sed ipsum posuere pharetra 
			accumsan at urna. Fusce rutrum facilisis magna, vel dignissim libero lacinia id. Duis ac 
			nibh nisi. Suspendisse nec porttitor elit. Proin fringilla vitae risus ut commodo. Fusce 
			enim justo, molestie elementum mauris nec, sodales maximus risus. Nullam elementum finibus 
			luctus. Etiam in metus accumsan, vestibulum velit sit amet, rutrum massa. Etiam vitae aliquam 
			lacus. Proin in dignissim diam, sed sagittis ante. Sed pharetra scelerisque erat nec aliquet. 
			Nulla scelerisque nec magna at rutrum. Mauris in lacinia nibh. Nulla pulvinar turpis eu neque 
			faucibus, non auctor lectus maximus. Pellentesque imperdiet, orci vitae tempus facilisis, tortor nisi 
			posuere mauris, ac tempus augue massa quis lacus.'
			    position=center
	paragraph '&nbsp; ' position=center
	paragraph 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at nisl sed ipsum posuere pharetra 
			accumsan at urna. Fusce rutrum facilisis magna, vel dignissim libero lacinia id. Duis ac 
			nibh nisi. Suspendisse nec porttitor elit. Proin fringilla vitae risus ut commodo. Fusce 
			enim justo, molestie elementum mauris nec, sodales maximus risus. Nullam elementum finibus 
			luctus. Etiam in metus accumsan, vestibulum velit sit amet, rutrum massa. Etiam vitae aliquam 
			lacus. Proin in dignissim diam, sed sagittis ante. Sed pharetra scelerisque erat nec aliquet. 
			Nulla scelerisque nec magna at rutrum. Mauris in lacinia nibh. Nulla pulvinar turpis eu neque 
			faucibus, non auctor lectus maximus. Pellentesque imperdiet, orci vitae tempus facilisis, tortor nisi 
			posuere mauris, ac tempus augue massa quis lacus.'
			    position=center
	paragraph '&nbsp; ' position=center
	paragraph 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at nisl sed ipsum posuere pharetra 
			accumsan at urna. Fusce rutrum facilisis magna, vel dignissim libero lacinia id. Duis ac 
			nibh nisi. Suspendisse nec porttitor elit. Proin fringilla vitae risus ut commodo. Fusce 
			enim justo, molestie elementum mauris nec, sodales maximus risus. Nullam elementum finibus 
			luctus. Etiam in metus accumsan, vestibulum velit sit amet, rutrum massa. Etiam vitae aliquam 
			lacus. Proin in dignissim diam, sed sagittis ante. Sed pharetra scelerisque erat nec aliquet. 
			Nulla scelerisque nec magna at rutrum. Mauris in lacinia nibh. Nulla pulvinar turpis eu neque 
			faucibus, non auctor lectus maximus. Pellentesque imperdiet, orci vitae tempus facilisis, tortor nisi 
			posuere mauris, ac tempus augue massa quis lacus.'
			    position=center
;

view image_about_view:
	!row 1
	show common.banner1 at 2 size 3 
	show common.banner2 at 4 size 3 
;

page table_page:
	 title='Table example'
	 use menubar mainMenu
	 use sidebar mainSidebar
	 use footer mainFooter
	 show table_view position=center
;

view table_view:
	!row 4
 	 show common.tableName at 2 size 8
 	!row 5
 	table data_show={ user.username,  user.age, user.gender} at 3 size 6 
;

page thumbnail_page:
	title ='Thumbnail example'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show thumbnail_view position=center
;

view thumbnail_view:
	!row 4
 	 show common.tableName at 2 size 8 
 	!row 5
 	thumbnail data_show={ user.username,  user.age, user.gender } at 2 size 9
;

page list_page:
	title ='List example'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show list_view position=center
;

view list_view:
	!row 4
 	 show common.tableName at 2 size 8 
 	!row 5
 	list data_show={user.username,  user.mail } at 3 size 6 
;

view test_view:
    show list_view at 1 size 1
;

page user_single_page:
    params = user:id
    title='Single user'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show user_single_view position=center
;

view user_single_view:
    !row 4
 	show user.username at 2 size 8
 	!row 5
 	show user.mail at 2 size 8
 	!row 6
 	show user.birthDate at 2 size 8
 	!row 7
 	show user.gender at 2 size 8
;

// Groups

page group_form_page:
    title='Group form'
    use menubar mainMenu
	show group_form_view position=center
;

view group_form_view:
    !row 1
    form for group actions=save at 3 size 6
;

page group_table_page:
	 title='Table of groups'
	 use menubar mainMenu
	 use sidebar mainSidebar
	 use footer mainFooter
	 show group_table_view position=center
;

view group_table_view:
	!row 4
 	 show common.tableName at 2 size 8
 	!row 5
 	table data_show={ group.name link @group_single_page, group.description } at 3 size 6
;

page group_thumbnail_page:
	title = 'Thumbnails of groups'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show group_thumbnail_view position=left
;

view group_thumbnail_view:
	!row 4
 	 show common.tableName at 2 size 8
 	!row 5
 	thumbnail data_show={ group.name, group.name link @group_single_page as 'go to group' , group.description } at 2 size 9
;

page group_list_page:
	title = 'List of groups'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show group_list_view position=right
;

view group_list_view:
	!row 4
 	 show common.tableName at 2 size 8
 	!row 5
 	list data_show={ group.name, group.description } at 3 size 6
;

page group_single_page:
    params = group:id
    title='Single group'
	use menubar mainMenu
	use sidebar mainSidebar
	use footer mainFooter
	show group_single_view position=center
;

view group_single_view:
	!row 4
 	show group.name at 2 size 8
 	!row 5
 	show group.description at 2 size 8
 	!row 6
 	show group.owner by {username, mail link @user_single_page} at 2 size 8
 	!row 7
 	show group.users by {username} at 2 size 8
;