object user:
	name text label='Name' class={'required'}
	username text label='User name'
	first_name text label='First name'
	last_name text label='Last name'
	query getUsersByName property=name condition=lt$3 sortBy=name rangeTo = 2
	query getUsersBySort property=username condition=startsWith$'mo'
;

page user_page for user.getUsersByName:
	title = 'Details for user'
	show user.name position=right size=large
	show user.username position=center
;