object user:
	name text label='Name' class={'required'}
	username text label='User name'
	first_name text label='First name'
	last_name text label='Last name'
	pass password label='Password'
	num number label='Age' class={'required', 'step':'1'} 
	mail email label='Email' 
	slika image label='google.com' ref= ' s' 
	myLabel label label = 'Hello World'
	birthDate date label = 'Birth date'
	articles link label='Articles' @articles_for_user ref='ssss'
	gender combobox label='Gender' parameters = { 'Male', 'Female' }
	tvType radio label='TV' parameters = { 'PLASMA', 'LCD', 'LED' }
	married checkbox label='Married'
;

object article:
	title text label='Name'
	description text label='Description'
	author text label='Author'
;

page user_page:
	title = 'Details for user'
	sidebar:
	    'Articles' @articles_for_user
	    'More articles' @articles_for_user
	    'Even more articles!' @articles_for_user
	    'Whole lotta articles' @articles_for_user
	;
	show user.name position=top size=large
	show user.username position=center
	show user.pass position=center
	show user.mail position=center
	show user.articles position=bottom
	show user.tvType position=left
	show user.slika position=right
;


view articles_list:
	show article.title 
	show article.description
	show article.author
	thumbnail data_show={ user.pass,  user.num, user.slika}
;

page articles_for_user:
	title='Articles for user'
	show articles_list position=center
;
