object user:
	name text label='Name' class={'required'}
	username text label='User name'
	first_name text label='First name'
	last_name text label='Last name'
	pass password label='Password'
	num number label='Age' class={'required', 'step':'1'} 
	mail email label='Email' 
	slika image label='google.com' class = {'width':'130', 'height':'130'} ref= 'https://www.ostraining.com/cdn/images/coding/bootstrap.png' 
	myLabel label label = 'Hello World'
	birthDate date label = 'Birth date'
	articles link label='Articles' @articles_for_user ref='ssss'
	gender combobox label='Gender' parameters = { 'Male', 'Female' }
	tvType radio label='TV' parameters = { 'PLASMA', 'LCD', 'LED' }
	married checkbox label='Married'
;

object article:
	title text label='Name'
	description text label='Description'
	author text label='Author'
;

page user_page:
	title = 'Details for user'
	sidebar:
	    'Articles' @articles_for_user
	    'More articles' @articles_for_user
	    'Even more articles!' @articles_for_user
	    'Google' ref='http://google.com'
	;
	
	menubar 'GenAn':
	    menu File:
            'New' ref='http://google.com'
            'Open' @articles_for_user
            'Close' @articles_for_user
	    ;
	    
	    menu Edit left:
            'Undo' @articles_for_user
            'Redo' @articles_for_user
            'Cut' @articles_for_user
            'Copy' @articles_for_user
            'Paste' @articles_for_user
	    ;
	    
	    'Google link' ref='http://google.com' left
	    'About' ref='http://google.com' 
	    
	     menu Profile right:
            'Log in' @articles_for_user
            'Log out' ref='http://google.com'
	    ;
	    
	    'Login' ref='http://google.com' right
	    
	;

	footer 'Moj novi footer' right
			
	show user.name position=right size=large
	show user.username position=center
	show user.pass position=center
	show user.mail position=center
	show user.tvType position=left
	show user.slika position=left
;


view articles_list:
	show article.title 
	show article.description
	show article.author
	thumbnail data_show={ user.pass,  user.num, user.slika}
	form for user action=create
;

page articles_for_user:
	title='Articles for user'
	show articles_list position=center
;
