object user:
	name text label='Name' class={'required'}
	username text label='User name'
	first_name text label='First name'
	last_name text label='Last name'
	pass password label='Password'
	num number label='Age' class={'required', 'step':'1'} 
	mail email label='Email' 
	slika image label='google.com' ref= 'https://www.ostraining.com/cdn/images/coding/bootstrap.png'  class = {'width':'160', 'height':'130'} 
	myLabel label label = 'Hello World'
	birthDate date label = 'Birth date' 
	articles link label='Articles'  @articles_for_user
	gender combobox label='Gender' parameters = { 'Male', 'Female' }
	tvType radio label='TV' parameters = { 'PLASMA', 'LCD', 'LED' }
	married checkbox label='Married' parameters={'Pera', 'Djura', 'Sima'}
;

object article:
	title text label='Name'
	description text label='Description'
	author text label='Author'
;

footer mainFooter 'Moj novi footer' right ;

sidebar mainSidebar:
		color=gray
	    'Articles' @articles_for_user
	    'More articles' @articles_for_user
	    'Even more articles!' @articles_for_user
	    'Google' ref='http://google.com'
	;

menubar mainMenu 'GenAn':
	    menu File:
            'New' ref='http://google.com'
            'Open' @articles_for_user
            'Close' @articles_for_user
	    ;
	    
	    menu Edit left:
            'Undo' @articles_for_user
            'Redo' @articles_for_user
            'Cut' @articles_for_user
            'Copy' @articles_for_user
            'Paste' @articles_for_user
	    ;
	    
	    'Google link' ref='http://google.com' left
	    'About' ref='http://google.com' 
	    
	     menu Profile right:
            'Log in' @articles_for_user
            'Log out' ref='http://google.com'
	    ;
	    
	    'Login' ref='http://google.com' right
	;

view sub_list:
   show article.title
;

view articles_list:
    show sub_list
	show article.title
	show article.description at 2 size 2
	!row 4
	show article.author at 4 size 4
	thumbnail data_show={ user.pass,  user.num, user.slika}
	!row 2
	form for user actions=save update
;

page user_page:
	title = 'Details for user'
	use menubar mainMenu
	use footer mainFooter
	use sidebar mainSidebar
	
	jumbo: heading='Jumbo head'
			text='Lorem ipsum dolor sit amet, consectetur adipiscing elit.
				Etiam dictum viverra turpis, a tristique ligula feugiat iaculis. Nam cursus
				risus vel iaculis dictum.'
		  imgPath='http://smartassistans.se/wp-content/themes/smartassistans/img/jumbotron.jpg'
		  {'Next' ref='http://google.com'}
		  position=top
	
	show user.name position=right size=large
	show user.username position=center
	show user.pass position=center
	show user.mail position=center
	show user.tvType position=left
	show user.slika position=left
	show user.married position=left
	paragraph 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.
				Etiam dictum viverra turpis, a tristique ligula feugiat iaculis. Nam cursus
				risus vel iaculis dictum.'
				position=center
    show articles_list position=center
;

view user_view:
    show user.name
    show articles_list
;

page articles_for_user:
	title='Articles for user'
	use sidebar mainSidebar
	show articles_list position=center
;
